--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ div.center{
 div.center:hover{
     border-color: black;
     background-color: rgba(255,255,255,0.9);
-    background-image: url(/images/logo.png);
+    background-image: url(/images/logo2.png);
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;ы
